<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travel Book</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="login_error">Login failed</string>
    <string name="create_account">Create an account</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="ask_email_explanation">Please, enter your email, a message will be sent to continue :</string>
    <string name="send">Send</string>
    <string name="send_success">Message has been sent. Check your emails to continue.</string>
    <string name="send_failure">Failure to send message. Please, try again later.</string>
    
    <string name="items_tab_name">My items</string>
    <string name="item_already_uploaded">%1$s is already on the server into another album</string>
    
    <string name="pick_photo">Pick a photo</string>
    <string name="take_photo">Take a photo</string>
    <string name="take_video">Take a video</string>
    <string name="record">Record a sound</string>
    <string name="write_text">Write a text</string>
    
    <string name="followers_tab_name">Share</string>

    <string name="menu_add">Add</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    
    <string name="delete_item">Are you sure you want to delete %1$s?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    
    <string name="sync_running">Synchronizing with server ...</string>
    
    <string name="visibility">Album visibility :</string>
    <string name="private_choice">Private : Only seen by you.</string>
    <string name="shared_choice">Shared : Can be seen by people you invite.</string>
    <string name="published_choice">Published : Visible to everybody.</string>
    <string name="archive_explanation">Move all items to another album saved on the server.</string>
    <string name="archive_buton">Archive</string>
    
    <string name="network_unreachable">Network unreachable. Please, try again later.</string>
    <string name="network_error">Network error.</string>
    <string name="download_failure">Download failure for %1$s. Try to refresh later.</string>
    
    <string name="name">Name :</string>
    <string name="year">Year :</string>
    <string name="description">Description :</string>
    
    <string name="email_missing">%1$s has no email.</string>
    <string name="delete_contact">Stop sharing with %1$s ?</string>
    <string name="select_email">Select email :</string>
    
    <string name="add_contact">Add a contact</string>
    <string name="enter_email">Enter the email of the person you want to share with :</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    
    <string name="site_button">voyage.bcdlog.com</string>
    
    <string name="audio_failure">Failed to play audio file.</string>
    <string name="video_failure">Failed to play video file.</string>
</resources>