<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="@string/app_name" />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_gravity="center_horizontal"
    android:padding="10dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/transparent"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/font_size"
	            android:text="@string/login"
	            android:textColor="#000" />

	        <com.bcdlog.travelbook.activities.EditTextWithNext
	            android:id="@+id/login"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:inputType="text"
	            android:textColor="#000"
	            android:textSize="@dimen/font_size" />

	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/transparent"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal" >
	        <TextView
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:text="@string/password"
	            android:textSize="@dimen/font_size"
	            android:textColor="#000" />

	        <com.bcdlog.travelbook.activities.EditTextWithGo
	            android:id="@+id/password"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:inputType="textPassword"
	            android:password="true"
	            android:textColor="#000"
	            android:textSize="@dimen/font_size" />

	    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

	    <Button
	        android:id="@+id/connect"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:gravity="center_horizontal|center_vertical"
	        android:text="@string/connect" 
	        android:textSize="@dimen/font_size"
	        android:textColor="#FFF"/>
	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="#FE2E2E" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/create_account" 
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/forgot_password"
            android:textColor="#FFF" />
    </LinearLayout>

</LinearLayout>